--- a/src/App.css
+++ b/src/App.css
@@ -7,4 +7,5 @@
     background-image: url('./assets/bg.png');
     background-repeat: no-repeat;
     background-size: cover;
+    overflow-x: hidden;
 }
