--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -4,6 +4,7 @@
   grid-template-columns: 1fr 1fr;
   grid-template-areas: "txt img";
   margin-top: 2rem;
+  width: 100vw;
 }
 
 .mainText {
@@ -35,7 +36,7 @@ button {
     margin-top: 2rem;
   background: #8c30f5;
   box-shadow: 15px 30px 60px #d6b1ff;
-  border-radius: 8px;
+  border-radius: 10px;
   padding: 20px 64px;
   border: none;
   color: #fff;
@@ -48,6 +49,7 @@ button {
 
   text-align: center;
   cursor: pointer;
+  outline: none;
 }
 button:hover{
   background: #9b43ff;
