--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,19 +1,22 @@
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@500&display=swap");
 .navbar {
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: 1fr 1.5fr 1fr;
+  width: 100vw;
+  place-items: center;
   margin-top: 1rem;
-  margin-bottom: 1rem;
-  align-items: center;
-  justify-content: space-around;
+
 }
 
+.nav{
+  padding: 0rem 8;
+}
 .nav_links li,
 a {
   text-decoration: none;
   list-style: none;
   display: inline;
-  margin-left: 2rem;
+  margin-left: 1.5rem;
   font-family: Manrope;
   font-style: normal;
   font-weight: 1;
@@ -26,6 +29,9 @@ a {
   color: #75E3EA;
 }
 
-.logo {
-  padding-left: 2.5rem;
+.nav_links a{
+  margin: 0 2rem;
+}
+.logo{
+  padding-right: 12rem;
 }
