--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -55,3 +55,106 @@ button:hover{
   background: #9b43ff;
 
 }
+@media only screen and (max-width: 700px){
+  .Hero {
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-areas: "txt";
+  height: 100vh;
+  place-items: center;
+}
+.mainText {
+  grid-area: txt;
+  padding-top: 2rem;
+  padding-left: 2rem;
+}
+h1 {
+  font-family: Manrope;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 62px;
+  line-height: 68px;
+  /* or 136% */
+
+  /* Text / Gray 900 */
+
+  color: #18191f;
+}
+button {
+    margin-top: 2rem;
+  background: #8c30f5;
+  box-shadow: 15px 30px 60px #d6b1ff;
+  border-radius: 10px;
+  padding: 12px 24px;
+  border: none;
+  color: #fff;
+  font-family: Manrope;
+  font-style: normal;
+  font-weight: 1;
+  font-size: 16px;
+  line-height: 30px;
+  /* identical to box height, or 150% */
+
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+}
+button:hover{
+  background: #9b43ff;
+
+}
+}
+
+@media only screen and (max-width: 1300px){
+  .Hero {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-areas: "txt";
+  height: 100vh;
+  width: 100vw;
+  place-items: center;
+}
+.mainText {
+  grid-area: txt;
+  padding-top: 2rem;
+  padding-left: 2rem;
+}
+h1 {
+  font-family: Manrope;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 72px;
+  line-height: 98px;
+  /* or 136% */
+
+  /* Text / Gray 900 */
+
+  color: #18191f;
+}
+button {
+    margin-top: 2rem;
+  background: #8c30f5;
+  box-shadow: 15px 30px 60px #d6b1ff;
+  border-radius: 10px;
+  padding: 20px 64px;
+  border: none;
+  color: #fff;
+  font-family: Manrope;
+  font-style: normal;
+  font-weight: 1;
+  font-size: 16px;
+  line-height: 30px;
+  /* identical to box height, or 150% */
+
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+}
+button:hover{
+  background: #9b43ff;
+
+}
+.img {
+  display: none;
+}
+}
